Workshop03/code-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: code-server
  name: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: linuxserver/code-server:amd64-4.95.3
        ports:
        - containerPort: 8443
        volumeMounts:
        - mountPath: /config/workspace
          name: code-server-storage
      volumes:
      - name: code-server-storage
        persistentVolumeClaim:
          claimName: code-server-pvc
