Workshop03/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: code-server
  name: code-server-service
  labels:
    app: code-server
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8443
  type: LoadBalancer
